Fix alignment

--- a/packages/xstate-viz/themes/dark.scss
+++ b/packages/xstate-viz/themes/dark.scss
@@ -1,28 +1,16 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  position: relative;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-body {
-  padding: 2rem;
-}
-
 [data-xviz='machine'] {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --gap: 0.5rem;
   background: #111;
   color: white;
   --xviz-color-background: #{rgba(white, 0.2)} !important;
+  padding: 1rem;
+
+  &,
+  * {
+    box-sizing: border-box;
+    position: relative;
+  }
 }
 
 [data-xviz='stateNode'] {
